--- a/jupyter_notebook/Tensor.ipynb
+++ b/jupyter_notebook/Tensor.ipynb
@@ -799,7 +799,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "33e9333b",
+   "id": "978a60cd",
    "metadata": {},
    "outputs": [
     {
@@ -823,7 +823,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "53c559f9",
+   "id": "78ae963c",
    "metadata": {},
    "outputs": [
     {
@@ -841,6 +841,150 @@
     "a = torch.ones(3, 2)\n",
     "a_t = a.transpose(0, 1)#將 a 張量的第 0 軸與第 1 軸轉置，但此處是呼叫張量的 method\n",
     "a.shape, a_t.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "b7b401ca",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       " 4.0\n",
+       " 1.0\n",
+       " 5.0\n",
+       " 3.0\n",
+       " 2.0\n",
+       " 1.0\n",
+       "[torch.FloatStorage of size 6]"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#3.7 張量的儲存原理\n",
+    "points = torch.tensor([[4.0, 1.0], [5.0, 3.0], [2.0, 1.0]]) #創建一個 3x2 的 2軸張量，用來存放 3個座標點\n",
+    "points.storage()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "502e746a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.0"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "points_storage = points.storage() #points_storage 為 points 張量的 shape\n",
+    "points_storage[0] #取得 points_storage 中第 0 個元素"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "1121811c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.0"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "points.storage()[0] #另一種取得 storage 中元素的方法"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "44368da8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[2., 1.],\n",
+       "        [5., 3.],\n",
+       "        [2., 1.]])"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "points_storage[0] = 2.0 #將 points_storage 中索引為 0 的元素值由 4.0 改為 2.0\n",
+    "points"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "fba04cc5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1., 1.],\n",
+       "        [1., 1.],\n",
+       "        [1., 1.]])"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = torch.ones(3, 2) #將 a 張量內的所有元素值初始化為 1\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "c17641fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0., 0.],\n",
+       "        [0., 0.],\n",
+       "        [0., 0.]])"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.zero_() #將 a 張量內的所有元素值修改成 0 \n",
+    "a"
    ]
   }
  ],
