Auto stash before checking out "origin/main"

--- a/jupyter_notebook/Tensor.ipynb
+++ b/jupyter_notebook/Tensor.ipynb
@@ -611,23 +611,23 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[[-0.1505,  0.0476,  0.0430, -0.0749,  0.0162],\n",
-       "         [-0.0727, -0.0429,  0.0763,  0.0336,  0.3425],\n",
-       "         [-0.5103, -0.2020, -0.0388, -0.0338, -0.0217],\n",
-       "         [-0.0774,  0.2711,  0.2309, -0.1066,  0.0477],\n",
-       "         [-0.2388,  0.3354, -0.1622, -0.3442, -0.2895]],\n",
+       "tensor([[[-0.2773,  0.0084,  0.0272, -0.2250,  0.0759],\n",
+       "         [-0.2332,  0.0754,  0.3835, -0.0502,  0.2706],\n",
+       "         [-0.1257, -0.0764,  0.3188,  0.3613, -0.0336],\n",
+       "         [-0.0925, -0.0487,  0.2099, -0.1126,  0.0715],\n",
+       "         [-0.0890, -0.0952, -0.3509,  0.0186,  0.3816]],\n",
        "\n",
-       "        [[-1.0878,  0.7059,  0.1438, -0.1788, -0.6182],\n",
-       "         [-0.3951,  0.2574,  0.4641,  0.0075, -0.8880],\n",
-       "         [ 0.0406, -0.1926, -0.7543,  1.3226,  0.1801],\n",
-       "         [-0.9436,  1.2400,  0.4850,  0.7961, -1.4018],\n",
-       "         [ 1.3471,  0.1448, -1.0721,  0.4818, -0.3103]],\n",
+       "        [[-1.1077, -0.4248,  1.0571,  0.2131,  0.3409],\n",
+       "         [ 0.5442, -0.7657, -0.5809,  1.0463,  0.6673],\n",
+       "         [-0.5278,  0.9958,  0.8422,  0.9159,  0.1486],\n",
+       "         [ 0.1434, -0.2943, -0.9853,  0.2840,  0.7125],\n",
+       "         [ 0.4544, -1.1175, -1.1355, -0.2381, -0.0991]],\n",
        "\n",
-       "        [[-0.0158,  0.0056, -0.0026,  0.0569,  0.0563],\n",
-       "         [-0.0613, -0.0954, -0.0452, -0.0323,  0.0197],\n",
-       "         [-0.0252,  0.0456, -0.0246, -0.0129,  0.0571],\n",
-       "         [ 0.1728,  0.0192,  0.0491, -0.1073, -0.0429],\n",
-       "         [-0.1136,  0.1430,  0.2094,  0.0382,  0.0652]]],\n",
+       "        [[-0.0223,  0.0407,  0.0095, -0.0467,  0.0099],\n",
+       "         [-0.1265,  0.0299, -0.0435,  0.0253,  0.0656],\n",
+       "         [-0.1339,  0.0156,  0.0133,  0.1113, -0.0846],\n",
+       "         [-0.0407,  0.0720, -0.1151,  0.1006,  0.0640],\n",
+       "         [-0.0120, -0.0710,  0.0702,  0.0400, -0.0950]]],\n",
        "       names=('channels', 'rows', 'columns'))"
       ]
      },
@@ -1800,7 +1800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 85,
    "id": "be2772bd",
    "metadata": {},
    "outputs": [
@@ -1811,7 +1811,7 @@
        "       [1., 1., 1., 1.]], dtype=float32)"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1825,7 +1825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 86,
    "id": "55413062",
    "metadata": {},
    "outputs": [],
@@ -1836,7 +1836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 87,
    "id": "dca4e6e8",
    "metadata": {},
    "outputs": [
@@ -1846,7 +1846,7 @@
        "tensor([0, 1, 2, 3, 4, 5, 6, 7, 8])"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1859,7 +1859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 88,
    "id": "e0bb843e",
    "metadata": {},
    "outputs": [
@@ -1869,7 +1869,7 @@
        "torch.Size([9])"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1880,7 +1880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 89,
    "id": "e959ce4f",
    "metadata": {},
    "outputs": [
@@ -1890,7 +1890,7 @@
        "0"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1901,7 +1901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 90,
    "id": "faf9859f",
    "metadata": {},
    "outputs": [
@@ -1911,7 +1911,7 @@
        "(1,)"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1922,7 +1922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 91,
    "id": "f7873beb",
    "metadata": {},
    "outputs": [
@@ -1934,7 +1934,7 @@
        "        [6, 7, 8]])"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1946,7 +1946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 92,
    "id": "069fef81",
    "metadata": {},
    "outputs": [
@@ -1956,7 +1956,7 @@
        "True"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1967,7 +1967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 93,
    "id": "1479ad60",
    "metadata": {},
    "outputs": [
@@ -1978,7 +1978,7 @@
        "        [7, 8]])"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1990,7 +1990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 94,
    "id": "989799e0",
    "metadata": {},
    "outputs": [
@@ -2000,7 +2000,7 @@
        "torch.Size([2, 2])"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2011,7 +2011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 95,
    "id": "efa88e99",
    "metadata": {},
    "outputs": [
@@ -2021,7 +2021,7 @@
        "4"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2032,7 +2032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 96,
    "id": "26888d6a",
    "metadata": {},
    "outputs": [
@@ -2042,7 +2042,7 @@
        "(3, 1)"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2053,7 +2053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 97,
    "id": "05a802f4",
    "metadata": {
     "scrolled": true
@@ -2065,7 +2065,7 @@
        "torch.float32"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2077,7 +2077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 98,
    "id": "941d91de",
    "metadata": {},
    "outputs": [
@@ -2088,13 +2088,79 @@
        "        -0.1455])"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "a.to(dtype=torch.float32).cos_()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "id": "f7ee5c4b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#進階索引\n",
+    "a = torch.arange(10) #先創建一個 0 到 9 的 1 軸張量\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "id": "8fbf42f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([False, False, False, False, False,  True,  True,  True,  True,  True])"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b = a>=5 #判斷 a 張量中那些元素值 >= 5，並將判斷結果存在 b 張量 \n",
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "id": "983fb6f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([5, 6, 7, 8, 9])"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a[b] #利用 b 這個佈林張量來篩選出符合條件的元素"
    ]
   }
  ],
