--- a/jupyter_notebook/TimeSeqLoad.ipynb
+++ b/jupyter_notebook/TimeSeqLoad.ipynb
@@ -1,6 +1,320 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "28668bbe",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1.0000e+00, 1.0000e+00, 1.0000e+00,  ..., 3.0000e+00, 1.3000e+01,\n",
+       "         1.6000e+01],\n",
+       "        [2.0000e+00, 1.0000e+00, 1.0000e+00,  ..., 8.0000e+00, 3.2000e+01,\n",
+       "         4.0000e+01],\n",
+       "        [3.0000e+00, 1.0000e+00, 1.0000e+00,  ..., 5.0000e+00, 2.7000e+01,\n",
+       "         3.2000e+01],\n",
+       "        ...,\n",
+       "        [1.7377e+04, 3.1000e+01, 1.0000e+00,  ..., 7.0000e+00, 8.3000e+01,\n",
+       "         9.0000e+01],\n",
+       "        [1.7378e+04, 3.1000e+01, 1.0000e+00,  ..., 1.3000e+01, 4.8000e+01,\n",
+       "         6.1000e+01],\n",
+       "        [1.7379e+04, 3.1000e+01, 1.0000e+00,  ..., 1.2000e+01, 3.7000e+01,\n",
+       "         4.9000e+01]])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import torch\n",
+    "\n",
+    "bikes_numpy = np.loadtxt('../data/p1ch4/bike-sharing-dataset/hour-fixed.csv',\n",
+    "                        dtype=np.float32,\n",
+    "                        delimiter=',',\n",
+    "                        skiprows=1,\n",
+    "                        converters={1: lambda x: float(x[8:10])}\n",
+    "                        )\n",
+    "bikes = torch.from_numpy(bikes_numpy)\n",
+    "bikes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "0ba640fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([17520, 17])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bikes.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "307f564b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([730, 24, 17])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "daily_bikes = bikes.view(-1, 24, bikes.shape[1]) #重塑張量\n",
+    "\n",
+    "daily_bikes.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "600afafe",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([730, 17, 24])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "daily_bikes = daily_bikes.transpose(1, 2)\n",
+    "daily_bikes.shape\n",
+    "# torch.Size([730, 17, 24]) => B x C x L(B: 表示有多少天的資料， C: 為有多少種資訊， L: 一天中有多少以資料)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "180a933c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([1, 1, 1, 1, 1, 2, 1, 1, 1, 1, 1, 1, 1, 2, 2, 2, 2, 2, 3, 3, 2, 2, 2, 2])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "first_day = bikes[:24].long() #取出第一天(首 2個小時)的資料\n",
+    "weather_onehot = torch.zeros(24, 4) #先創建一個 shape 為 24x4 的張量，內部直接為初始化為 0，用於存放 one-hot編碼後的結果\n",
+    "\n",
+    "first_day[:,9] #取出第一天的所有資料中，第 9 行的資訊(即天氣狀況)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "b4f81587",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1., 0., 0., 0.],\n",
+       "        [1., 0., 0., 0.],\n",
+       "        [1., 0., 0., 0.],\n",
+       "        [1., 0., 0., 0.],\n",
+       "        [1., 0., 0., 0.],\n",
+       "        [0., 1., 0., 0.],\n",
+       "        [1., 0., 0., 0.],\n",
+       "        [1., 0., 0., 0.],\n",
+       "        [1., 0., 0., 0.],\n",
+       "        [1., 0., 0., 0.],\n",
+       "        [1., 0., 0., 0.],\n",
+       "        [1., 0., 0., 0.],\n",
+       "        [1., 0., 0., 0.],\n",
+       "        [0., 1., 0., 0.],\n",
+       "        [0., 1., 0., 0.],\n",
+       "        [0., 1., 0., 0.],\n",
+       "        [0., 1., 0., 0.],\n",
+       "        [0., 1., 0., 0.],\n",
+       "        [0., 0., 1., 0.],\n",
+       "        [0., 0., 1., 0.],\n",
+       "        [0., 1., 0., 0.],\n",
+       "        [0., 1., 0., 0.],\n",
+       "        [0., 1., 0., 0.],\n",
+       "        [0., 1., 0., 0.]])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weather_onehot.scatter_(1, #沿著第 1 軸進行 one_hot 編碼\n",
+    "                       first_day[:,9].unsqueeze(1).long() - 1, #進行 one-hot 編碼的來源張量，因為原始資料是 1~4 所以要 -1\n",
+    "                       1.0) #設定 one-hot 編碼中非 0 的值為 1  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "9b10779a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 1.0000,  1.0000,  1.0000,  0.0000,  1.0000,  0.0000,  0.0000,  6.0000,\n",
+       "          0.0000,  1.0000,  0.2400,  0.2879,  0.8100,  0.0000,  3.0000, 13.0000,\n",
+       "         16.0000,  1.0000,  0.0000,  0.0000,  0.0000]])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.cat((bikes[:24], weather_onehot), 1)[:1] #將原始資料與 one-hot 天氣情況沿著 1軸的方向接起來"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "f2570c59",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([730, 4, 24])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#將 dauky_baikes 做上述的 天氣情況 one-hot處理\n",
+    "daily_weather_onehot = torch.zeros(daily_bikes.shape[0], 4, daily_bikes.shape[2])\n",
+    "daily_weather_onehot.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "fd7e46d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([730, 4, 24])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "daily_weather_onehot.scatter_(1, daily_bikes[:,9,:].long().unsqueeze(1) - 1, 1.0)\n",
+    "daily_weather_onehot.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "ff33da1b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "daily_bikes = torch.cat((daily_bikes, daily_weather_onehot), dim=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "9d426e0b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#也可以把天氣狀況當作連續數值，並將它投影到 0.0 ~ 1.0之間\n",
+    "daily_bikes[:, 9, :] = (daily_bikes[:, 9, :] - 1.0) / 3.0 #在把天氣狀況行的值都減了 1 後，最大值為 3，若將該行的值除以 3，就可以將天氣狀況值限制在 0~1 之間"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "7cd9d5a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#另一種將他們的值域映射到[0.0, 1.0]的選擇如下\n",
+    "temp = daily_bikes[:, 10, :] #這裡以資料集中的 攝氏溫度 資訊為例，其所引為 10\n",
+    "temp_min = torch.min(temp)\n",
+    "temp_max = torch.max(temp)\n",
+    "daily_bikes[:, 10, :] = (daily_bikes[:, 10, :] - temp_min) / (temp_max - temp_min)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "14dd793b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#也可以做標準化\n",
+    "temp = daily_bikes[:, 10, :]\n",
+    "daily_bikes[:, 10, :] = (daily_bikes[:, 10, :] - torch.mean(temp)) / torch.std(temp)"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.8"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
