完成第五章 學習的機制

--- a/jupyter_notebook/CSVLoad.ipynb
+++ b/jupyter_notebook/CSVLoad.ipynb
@@ -192,7 +192,7 @@
    "source": [
     "target_onehot = torch.zeros(target.shape[0], 10) #建立 shape 為 [4980, 10]，值均為 0 的張量，用來存放編碼結果\n",
     "\n",
-    "a = target_onehot.scatter_(1, target.unsqueeze(1), 1.0) #依 targe 的內容進行編碼\n",
+    "a = target_onehot.scatter_(1, target.unsqueeze(1), 1.0) #依 target 的內容進行編碼\n",
     "\n",
     "#scatter_ 有 3 個參數\n",
     "# 1. 要沿著哪個軸進行 one-hot 編碼( 1代表第 1 軸)\n",
