--- a/python_file/luna/RunEverthing.ipynb
+++ b/python_file/luna/RunEverthing.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "92ca3711",
+   "id": "5666581c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "35ebb342",
+   "id": "9d4f64c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "222a627a",
+   "id": "65200b0a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "28430732",
+   "id": "f19fabcb",
    "metadata": {
     "scrolled": false
    },
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "9ea70356",
+   "id": "034cdf69",
    "metadata": {},
    "outputs": [
     {
@@ -145,8 +145,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4ab60400",
+   "execution_count": 10,
+   "id": "3148d92e",
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,25 @@
       "2021-08-30 15:54:42,697 WARNING  pid:17516 util.util:209:enumerateWithEstimate E2 Training ----/6250, starting\n",
       "2021-08-30 15:54:53,671 INFO     pid:17516 util.util:229:enumerateWithEstimate E2 Training   16/6250, done at 2021-08-30 15:58:45, 0:03:52\n",
       "2021-08-30 15:54:56,352 INFO     pid:17516 util.util:229:enumerateWithEstimate E2 Training   64/6250, done at 2021-08-30 16:00:17, 0:05:24\n",
-      "2021-08-30 15:55:08,174 INFO     pid:17516 util.util:229:enumerateWithEstimate E2 Training  256/6250, done at 2021-08-30 16:01:03, 0:06:10\n"
+      "2021-08-30 15:55:08,174 INFO     pid:17516 util.util:229:enumerateWithEstimate E2 Training  256/6250, done at 2021-08-30 16:01:03, 0:06:10\n",
+      "2021-08-30 15:55:57,376 INFO     pid:17516 util.util:229:enumerateWithEstimate E2 Training 1024/6250, done at 2021-08-30 16:01:25, 0:06:32\n",
+      "2021-08-30 15:59:26,179 INFO     pid:17516 util.util:229:enumerateWithEstimate E2 Training 4096/6250, done at 2021-08-30 16:01:49, 0:06:56\n",
+      "2021-08-30 16:01:54,966 WARNING  pid:17516 util.util:240:enumerateWithEstimate E2 Training ----/6250, done at 2021-08-30 16:01:54\n",
+      "2021-08-30 16:01:55,149 INFO     pid:17516 training:312:logMetrics E2 LunaTrainingApp\n",
+      "2021-08-30 16:01:55,152 INFO     pid:17516 training:369:logMetrics E2 trn      0.2457 loss,  90.5% correct, 0.9365 precision, 0.8695 recall, 0.9018 f1 score\n",
+      "2021-08-30 16:01:55,152 INFO     pid:17516 training:382:logMetrics E2 trn_neg  0.2239 loss,  94.1% correct (94108 of 100000)\n",
+      "2021-08-30 16:01:55,153 INFO     pid:17516 training:395:logMetrics E2 trn_pos  0.2675 loss,  87.0% correct (86951 of 100000)\n",
+      "2021-08-30 16:01:55,171 WARNING  pid:17516 util.util:209:enumerateWithEstimate E2 Validation  ----/1723, starting\n",
+      "2021-08-30 16:02:00,397 INFO     pid:17516 util.util:229:enumerateWithEstimate E2 Validation    16/1723, done at 2021-08-30 16:03:21, 0:01:22\n",
+      "2021-08-30 16:02:02,128 INFO     pid:17516 util.util:229:enumerateWithEstimate E2 Validation    64/1723, done at 2021-08-30 16:03:06, 0:01:06\n",
+      "2021-08-30 16:02:09,130 INFO     pid:17516 util.util:229:enumerateWithEstimate E2 Validation   256/1723, done at 2021-08-30 16:03:03, 0:01:03\n",
+      "2021-08-30 16:02:36,780 INFO     pid:17516 util.util:229:enumerateWithEstimate E2 Validation  1024/1723, done at 2021-08-30 16:03:02, 0:01:02\n",
+      "2021-08-30 16:03:01,923 WARNING  pid:17516 util.util:240:enumerateWithEstimate E2 Validation  ----/1723, done at 2021-08-30 16:03:01\n",
+      "2021-08-30 16:03:01,924 INFO     pid:17516 training:312:logMetrics E2 LunaTrainingApp\n",
+      "2021-08-30 16:03:01,925 INFO     pid:17516 training:369:logMetrics E2 val      0.1777 loss,  94.8% correct, 0.0389 precision, 0.8529 recall, 0.0743 f1 score\n",
+      "2021-08-30 16:03:01,926 INFO     pid:17516 training:382:logMetrics E2 val_neg  0.1769 loss,  94.8% correct (52102 of 54971)\n",
+      "2021-08-30 16:03:01,926 INFO     pid:17516 training:395:logMetrics E2 val_pos  0.4729 loss,  85.3% correct (116 of 136)\n",
+      "2021-08-30 16:03:01,953 INFO     pid:17516 nb:009:run Finished: training.LunaTrainingApp.(['--num-workers=4', '--epochs=2', '--balanced', 'balanced']).main()\n"
      ]
     }
    ],
@@ -195,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b111157",
+   "id": "96d84010",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "756b5ea4",
+   "id": "12abe174",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e562cbf",
+   "id": "f87618ef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84bf6ea7",
+   "id": "8b4ed9a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb0aebb6",
+   "id": "e596a5a9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,10 +262,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "fb08fb0f",
+   "execution_count": 11,
+   "id": "d1b347c6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2021-08-30 16:03:01,960 INFO     pid:17516 nb:004:run Runnung: training.LunaTrainingApp(['--num-workers=4', '--epochs=2', '--balanced', '--augmented', 'fully-augmented']).main()\n",
+      "2021-08-30 16:03:01,966 INFO     pid:17516 training:130:initModel Using CUDA; 1 devices.\n",
+      "2021-08-30 16:03:01,969 INFO     pid:17516 training:193:main Starting LunaTrainingApp, Namespace(augment_flip=False, augment_noise=False, augment_offset=False, augment_rotate=False, augment_scale=False, augmented=True, balanced=True, batch_size=32, comment='fully-augmented', epochs=2, num_workers=4, tb_prefix='log')\n",
+      "2021-08-30 16:03:02,369 INFO     pid:17516 dsets:296:__init__ <dsets.LunaDataset object at 0x00000180B8D86C50>: 495958 training samples, 494743 neg, 1215 pos, 1:1 ratio\n",
+      "2021-08-30 16:03:02,416 INFO     pid:17516 dsets:296:__init__ <dsets.LunaDataset object at 0x00000180B8DC0C18>: 55107 validation samples, 54971 neg, 136 pos, unbalanced ratio\n",
+      "2021-08-30 16:03:02,417 INFO     pid:17516 training:206:main Epoch 1 of 2, 6250/1723 batches of size 32*1\n",
+      "2021-08-30 16:03:02,417 WARNING  pid:17516 util.util:209:enumerateWithEstimate E1 Training ----/6250, starting\n",
+      "2021-08-30 16:03:14,170 INFO     pid:17516 util.util:229:enumerateWithEstimate E1 Training   16/6250, done at 2021-08-30 16:10:56, 0:07:43\n",
+      "2021-08-30 16:03:17,017 INFO     pid:17516 util.util:229:enumerateWithEstimate E1 Training   64/6250, done at 2021-08-30 16:09:43, 0:06:30\n",
+      "2021-08-30 16:03:28,959 INFO     pid:17516 util.util:229:enumerateWithEstimate E1 Training  256/6250, done at 2021-08-30 16:09:42, 0:06:28\n",
+      "2021-08-30 16:04:20,486 INFO     pid:17516 util.util:229:enumerateWithEstimate E1 Training 1024/6250, done at 2021-08-30 16:10:04, 0:06:51\n",
+      "2021-08-30 16:07:56,739 INFO     pid:17516 util.util:229:enumerateWithEstimate E1 Training 4096/6250, done at 2021-08-30 16:10:25, 0:07:12\n",
+      "2021-08-30 16:10:28,569 WARNING  pid:17516 util.util:240:enumerateWithEstimate E1 Training ----/6250, done at 2021-08-30 16:10:28\n",
+      "2021-08-30 16:10:28,853 INFO     pid:17516 training:312:logMetrics E1 LunaTrainingApp\n",
+      "2021-08-30 16:10:28,856 INFO     pid:17516 training:369:logMetrics E1 trn      0.2871 loss,  88.1% correct, 0.9119 precision, 0.8428 recall, 0.8760 f1 score\n",
+      "2021-08-30 16:10:28,857 INFO     pid:17516 training:382:logMetrics E1 trn_neg  0.2585 loss,  91.9% correct (91853 of 100000)\n",
+      "2021-08-30 16:10:28,857 INFO     pid:17516 training:395:logMetrics E1 trn_pos  0.3158 loss,  84.3% correct (84277 of 100000)\n",
+      "2021-08-30 16:10:28,874 WARNING  pid:17516 util.util:209:enumerateWithEstimate E1 Validation  ----/1723, starting\n",
+      "2021-08-30 16:10:34,288 INFO     pid:17516 util.util:229:enumerateWithEstimate E1 Validation    16/1723, done at 2021-08-30 16:11:59, 0:01:26\n",
+      "2021-08-30 16:10:36,200 INFO     pid:17516 util.util:229:enumerateWithEstimate E1 Validation    64/1723, done at 2021-08-30 16:11:45, 0:01:12\n",
+      "2021-08-30 16:10:43,496 INFO     pid:17516 util.util:229:enumerateWithEstimate E1 Validation   256/1723, done at 2021-08-30 16:11:40, 0:01:06\n",
+      "2021-08-30 16:11:12,840 INFO     pid:17516 util.util:229:enumerateWithEstimate E1 Validation  1024/1723, done at 2021-08-30 16:11:39, 0:01:06\n",
+      "2021-08-30 16:11:39,552 WARNING  pid:17516 util.util:240:enumerateWithEstimate E1 Validation  ----/1723, done at 2021-08-30 16:11:39\n",
+      "2021-08-30 16:11:39,553 INFO     pid:17516 training:312:logMetrics E1 LunaTrainingApp\n",
+      "2021-08-30 16:11:39,555 INFO     pid:17516 training:369:logMetrics E1 val      0.2773 loss,  92.8% correct, 0.0296 precision, 0.8824 recall, 0.0572 f1 score\n",
+      "2021-08-30 16:11:39,556 INFO     pid:17516 training:382:logMetrics E1 val_neg  0.2774 loss,  92.8% correct (51034 of 54971)\n",
+      "2021-08-30 16:11:39,556 INFO     pid:17516 training:395:logMetrics E1 val_pos  0.2402 loss,  88.2% correct (120 of 136)\n",
+      "2021-08-30 16:11:39,564 INFO     pid:17516 training:206:main Epoch 2 of 2, 6250/1723 batches of size 32*1\n",
+      "2021-08-30 16:11:39,566 WARNING  pid:17516 util.util:209:enumerateWithEstimate E2 Training ----/6250, starting\n",
+      "2021-08-30 16:11:51,374 INFO     pid:17516 util.util:229:enumerateWithEstimate E2 Training   16/6250, done at 2021-08-30 16:19:05, 0:07:15\n",
+      "2021-08-30 16:11:54,069 INFO     pid:17516 util.util:229:enumerateWithEstimate E2 Training   64/6250, done at 2021-08-30 16:17:59, 0:06:08\n",
+      "2021-08-30 16:12:06,518 INFO     pid:17516 util.util:229:enumerateWithEstimate E2 Training  256/6250, done at 2021-08-30 16:18:26, 0:06:36\n",
+      "2021-08-30 16:12:58,555 INFO     pid:17516 util.util:229:enumerateWithEstimate E2 Training 1024/6250, done at 2021-08-30 16:18:46, 0:06:56\n",
+      "2021-08-30 16:16:32,002 INFO     pid:17516 util.util:229:enumerateWithEstimate E2 Training 4096/6250, done at 2021-08-30 16:19:00, 0:07:09\n",
+      "2021-08-30 16:19:01,804 WARNING  pid:17516 util.util:240:enumerateWithEstimate E2 Training ----/6250, done at 2021-08-30 16:19:01\n",
+      "2021-08-30 16:19:02,110 INFO     pid:17516 training:312:logMetrics E2 LunaTrainingApp\n",
+      "2021-08-30 16:19:02,114 INFO     pid:17516 training:369:logMetrics E2 trn      0.1763 loss,  93.8% correct, 0.9555 precision, 0.9186 recall, 0.9367 f1 score\n",
+      "2021-08-30 16:19:02,115 INFO     pid:17516 training:382:logMetrics E2 trn_neg  0.1588 loss,  95.7% correct (95717 of 100000)\n",
+      "2021-08-30 16:19:02,115 INFO     pid:17516 training:395:logMetrics E2 trn_pos  0.1939 loss,  91.9% correct (91864 of 100000)\n",
+      "2021-08-30 16:19:02,134 WARNING  pid:17516 util.util:209:enumerateWithEstimate E2 Validation  ----/1723, starting\n",
+      "2021-08-30 16:19:07,864 INFO     pid:17516 util.util:229:enumerateWithEstimate E2 Validation    16/1723, done at 2021-08-30 16:20:30, 0:01:22\n",
+      "2021-08-30 16:19:09,609 INFO     pid:17516 util.util:229:enumerateWithEstimate E2 Validation    64/1723, done at 2021-08-30 16:20:14, 0:01:06\n",
+      "2021-08-30 16:19:16,581 INFO     pid:17516 util.util:229:enumerateWithEstimate E2 Validation   256/1723, done at 2021-08-30 16:20:10, 0:01:03\n",
+      "2021-08-30 16:19:44,785 INFO     pid:17516 util.util:229:enumerateWithEstimate E2 Validation  1024/1723, done at 2021-08-30 16:20:10, 0:01:03\n",
+      "2021-08-30 16:20:10,486 WARNING  pid:17516 util.util:240:enumerateWithEstimate E2 Validation  ----/1723, done at 2021-08-30 16:20:10\n",
+      "2021-08-30 16:20:10,487 INFO     pid:17516 training:312:logMetrics E2 LunaTrainingApp\n",
+      "2021-08-30 16:20:10,489 INFO     pid:17516 training:369:logMetrics E2 val      0.1661 loss,  95.3% correct, 0.0476 precision, 0.9412 recall, 0.0906 f1 score\n",
+      "2021-08-30 16:20:10,489 INFO     pid:17516 training:382:logMetrics E2 val_neg  0.1661 loss,  95.3% correct (52409 of 54971)\n",
+      "2021-08-30 16:20:10,490 INFO     pid:17516 training:395:logMetrics E2 val_pos  0.1625 loss,  94.1% correct (128 of 136)\n",
+      "2021-08-30 16:20:10,517 INFO     pid:17516 nb:009:run Finished: training.LunaTrainingApp.(['--num-workers=4', '--epochs=2', '--balanced', '--augmented', 'fully-augmented']).main()\n"
+     ]
+    }
+   ],
    "source": [
     "run('training.LunaTrainingApp', f'--epochs={training_epochs}', '--balanced', '--augmented', 'fully-augmented')"
    ]
